--- a/templates/accounts/sign_up.html
+++ b/templates/accounts/sign_up.html
@@ -1,6 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
+{% load static %}
         <!-- BREADCRUMB -->
 		<div id="breadcrumb" class="section">
 
@@ -12,7 +13,7 @@
 			<div class="container">
 				<div class="row">
                     <!-- CONTENT PLACEHOLDER -->
-                    <form id="form-1" action="/accounts/sign_up" method="post">
+                    <form id="form-1" action="/accounts/sign_up" method="post" onsubmit="return false">
                         {% csrf_token %}
                         <p>
                             <label for="login">Логин:</label><br>
@@ -44,7 +45,7 @@
 			</div>
 		</div>
 		<!-- /SECTION -->
-<style>
+        <style>
     .b {
         width: 150px;
         margin-top: 30px;
@@ -59,5 +60,12 @@
     #form-1 label {
         font: italic 13pt "Trebuchet MS";
     }
+    .error {
+        display: block;
+        margin-top: 5px;
+        color: red;
+        font-style: italic;
+    }
 </style>
+        <script src="{% static 'js/sign_up.js' %}"></script>
 {% endblock content %}
