--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -18,6 +18,7 @@
  		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
  		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
  		<![endif]-->
+		<script src="{% static 'js/jquery.min.js' %}"></script>
     </head>
 	<body>
 		<!-- HEADER -->
@@ -154,7 +155,7 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="#">Главная</a></li>
+						<li class="active"><a href="/home">Главная</a></li>
 						<li><a href="#">Про сайт</a></li>
 						<li><a href="#">Каталог</a></li>
 						<li><a href="#">Новости</a></li>
@@ -326,7 +327,6 @@
 		<!-- /FOOTER -->
 
 		<!-- jQuery Plugins -->
-		<script src="{% static 'js/jquery.min.js' %}"></script>
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
 		<script src="{% static 'js/slick.min.js' %}"></script>
 		<script src="{% static 'js/nouislider.min.js' %}"></script>
