--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,6 +19,7 @@
  		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
  		<![endif]-->
 		<script src="{% static 'js/jquery.min.js' %}"></script>
+		<script src="{% static 'js/basket_display.js' %}"></script>
     </head>
 	<body>
 		<!-- HEADER -->
@@ -33,7 +34,18 @@
 					</ul>
 					<ul class="header-links pull-right">
 						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+						<li>
+							<a href="#">
+								<i class="fa fa-user-o">
+								{% if user.is_authenticated %}
+									{{ user.username }}
+								{% else %}
+									Гость
+								{% endif %}
+								</i>
+							</a>
+							<input id="user_id" type="hidden" value="{{ user.id }}">
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -41,8 +53,8 @@
 
 			<!-- MAIN HEADER -->
 			<div id="header">
-			<!-- container -->
-			<div class="container">
+				<!-- container -->
+				<div class="container">
 					<!-- row -->
 					<div class="row">
 						<!-- LOGO -->
@@ -78,8 +90,8 @@
 								<div>
 									<a href="#">
 										<i class="fa fa-heart-o"></i>
-										<span>Your Wishlist</span>
-										<div class="qty">2</div>
+										<span>Избранное</span>
+										<div class="qty">0</div>
 									</a>
 								</div>
 								<!-- /Wishlist -->
@@ -88,40 +100,19 @@
 								<div class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 										<i class="fa fa-shopping-cart"></i>
-										<span>Your Cart</span>
-										<div class="qty">3</div>
+										<span>Корзина</span>
+										<div id="_count" class="qty">0</div>
 									</a>
 									<div class="cart-dropdown">
 										<div class="cart-list">
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="./img/product01.png" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
-
-											<div class="product-widget">
-												<div class="product-img">
-													<img src="./img/product02.png" alt="">
-												</div>
-												<div class="product-body">
-													<h3 class="product-name"><a href="#">product name goes here</a></h3>
-													<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
-											</div>
 										</div>
 										<div class="cart-summary">
-											<small>3 Item(s) selected</small>
-											<h5>SUBTOTAL: $2940.00</h5>
+											<h5 id="count">Количество товаров: 0 шт</h5>
+											<h5 id="amount">Общая стоимость: 0.00&#8372;</h5>
 										</div>
 										<div class="cart-btns">
-											<a href="#">View Cart</a>
-											<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+											<a href="/orders">Управление корзиной</a>
+											<a href="/orders/confirm">Подтверждение заказа  <i class="fa fa-arrow-circle-right"></i></a>
 										</div>
 									</div>
 								</div>
@@ -141,7 +132,7 @@
 					</div>
 					<!-- row -->
 				</div>
-			<!-- container -->
+				<!-- container -->
 			</div>
 			<!-- /MAIN HEADER -->
 		</header>
@@ -149,15 +140,12 @@
 
 		<!-- NAVIGATION -->
 		<nav id="navigation">
-			<!-- container -->
 			<div class="container">
-				<!-- responsive-nav -->
 				<div id="responsive-nav">
-					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="/home">Главная</a></li>
+						<li class="active"><a href="/">Главная</a></li>
 						<li><a href="#">Про сайт</a></li>
-						<li><a href="#">Каталог</a></li>
+						<li><a href="/catalog">Каталог</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
@@ -170,6 +158,7 @@
 								{% else %}
 									Гость
 								{% endif %}
+								!
 							</a>
 						</li>
 						{% if not user.is_authenticated %}
@@ -180,11 +169,8 @@
 							<li><a href="/accounts/profile">Профиль</a></li>
 						{% endif %}
 					</ul>
-					<!-- /NAV -->
 				</div>
-				<!-- /responsive-nav -->
 			</div>
-			<!-- /container -->
 		</nav>
 		<!-- /NAVIGATION -->
 
